fixed Screen#run (for real)